# continuity-os

./: .env.example  .gitignore  .markdownlint.json  Cargo.toml  LICENSE.md  README.md  justfile  mise.toml  pyproject.toml  rust-toolchain.toml  rustfmt.toml
applications/chatter/: Cargo.toml
applications/chatter/src/: entities.rs  main.rs
applications/chatter/src/common/clients/: mod.rs
applications/chatter/src/common/clients/crowd_core/: mod.rs
applications/chatter/src/entities/command/: handlers.rs
applications/chatter/src/entities/foreign_account/: subscriptions.rs
applications/chatter/src/entities/local_account/: subscriptions.rs
applications/chatter/src/entities/message/: subscriptions.rs
applications/chatter/src/features/repl/: mod.rs
applications/magpie/: Cargo.toml
core/stdb/modules/corvidx/server/: Cargo.toml
modules/corvidx/: Cargo.toml
modules/corvidx/client/: Cargo.toml
modules/corvidx/client/src/: common.rs  domain.rs  lib.rs
modules/corvidx/client/src/common/: ports.rs  presentation.rs  traits.rs
modules/corvidx/client/src/common/_generated_bindings/: account_profile_metadata_type.rs  admin_set_account_role_reducer.rs  create_account_link_request_reducer.rs  import_foreign_account_reducer.rs  resolve_account_link_request_reducer.rs  update_foreign_account_profile_reducer.rs
modules/corvidx/client/src/common/stdb/: mod.rs
modules/corvidx/client/src/domain/: entities.rs  intersections.rs
modules/corvidx/client/src/domain/intersections/: platform_accounts.rs  platforms_accounts.rs  ports.rs
modules/corvidx/server/: Cargo.toml
modules/corvidx/server/src/: application.rs  entities.rs  lib.rs
modules/corvidx/server/src/app/: init.rs
modules/corvidx/server/src/application/: client_connection.rs  init.rs
modules/corvidx/server/src/common/: traits.rs
modules/corvidx/server/src/domain/: features.rs
modules/corvidx/server/src/entities/: reducers.rs
modules/corvidx/src/: entities.rs  features.rs  lib.rs
modules/corvidx/src/common/: traits.rs
modules/corvidx/src/entities/: reducers.rs
modules/corvidx/src/entities/foreign_account/: reducers.rs  tables.rs
modules/corvidx/src/entities/foreign_platform/: model.rs
modules/corvidx/src/entities/local_account/: reducers.rs
modules/corvidx/src/entities/message/: reducers.rs  tables.rs
modules/corvidx/src/entities/message_channel/: tables.rs
modules/corvidx/src/entities/native_account/: tables.rs
modules/corvidx/src/features/: internal.rs
modules/corvidx/src/features/account_administration/: reducers.rs
modules/corvidx/src/features/account_linking/: foreign_to_local.rs  link_reducers.rs  mod.rs  profile_mirroring.rs  reducers.rs  tables.rs  unlink_reducers.rs
modules/corvidx/src/features/profile_management/: mirroring_reducers.rs
modules/crowd_core/: Cargo.toml
modules/crowd_core/src/: entities.rs  lib.rs
modules/crowd_core/src/entities/account_profile/: reducers.rs  tables.rs
modules/crowd_core/src/entities/external_account/: tables.rs
modules/crowd_core/src/entities/foreign_account/: reducers.rs  tables.rs
modules/crowd_core/src/entities/local_account/: reducers.rs  tables.rs
modules/crowd_core/src/entities/message/: reducers.rs  tables.rs
modules/crowd_core/src/features/account_administration/: reducers.rs
modules/crowspace/: Cargo.toml
modules/crowspace/src/: entities.rs  features.rs  lib.rs
modules/crowspace/src/entities/account/model/: mod.rs  (+4 more)
modules/crowspace/src/entities/account_profile/: tables.rs
modules/crowspace/src/entities/external_account/: reducers.rs  tables.rs
modules/crowspace/src/entities/external_platform/: model.rs
modules/crowspace/src/entities/internal_account/: mod.rs  reducers.rs  tables.rs
modules/crowspace/src/entities/message/: mod.rs  reducers.rs  tables.rs
modules/crowspace/src/entities/public_profile/: mod.rs  tables.rs
modules/crowspace/src/entities/service/: README.md  tables.rs
modules/crowspace/src/entities/social_profile/: tables.rs
modules/crowspace/src/entities/text_channel/: mod.rs  tables.rs
modules/crowspace/src/features/: internal.rs
modules/crowspace/src/features/account_administration/: mod.rs  reducers.rs
services/raiven/: Cargo.toml
services/telecrow/: Cargo.toml
services/telecrow/src/: app.rs  application.rs  common.rs  domain.rs  entities.rs  features.rs  main.rs
services/telecrow/src/application/: general_subscriptions.rs
services/telecrow/src/application/telegram_bridge/: mod.rs
services/telecrow/src/common/: async_runtime.rs  constants.rs  runtime.rs  traits.rs
services/telecrow/src/common/bindings/: telegram.rs
services/telecrow/src/common/clients/: mod.rs
services/telecrow/src/common/utils/: logging.rs
services/telecrow/src/domain/: entities.rs
services/telecrow/src/entities/corvidx_account/: subscriptions.rs
services/telecrow/src/entities/corvidx_message/: subscriptions.rs
services/telecrow/src/entities/crowchat_message/: mod.rs  subscriptions.rs
services/telecrow/src/entities/crowchat_user/: model.rs  subscriptions.rs
services/telecrow/src/entities/crowspace_account/: mod.rs  model.rs  subscriptions.rs
services/telecrow/src/entities/crowspace_message/: mod.rs  subscriptions.rs
services/telecrow/src/entities/local_account/: subscriptions.rs
services/telecrow/src/entities/local_message/: mod.rs  subscriptions.rs
services/telecrow/src/entities/message/: mod.rs  subscriptions.rs
services/telecrow/src/entities/telegram_command/: handlers.rs  mod.rs  traits.rs
services/telecrow/src/entities/telegram_update/: handlers.rs  mod.rs  subscriptions.rs
services/telecrow/src/entities/telegram_user/: handlers.rs
services/telecrow/src/entities/user/: mod.rs  model.rs  subscriptions.rs
services/telecrow/src/features/message_forwarding/: mod.rs
services/telecrow/src/features/telegram_bridge/: commands.rs  events.rs  messages.rs  mod.rs
services/telecrow/src/features/telegram_relay/: events.rs  mod.rs
subsystems/raiven/services/oracle/: Cargo.toml
userspace/applications/jayterm/: Cargo.toml
userspace/applications/magpie/: Cargo.toml
(+514 files in other folders)
