[workspace]
resolver = "3"

members = [
	"applications/*",
	"core/stdb/modules/corvidx/*",
	"packages/*",
	"subsystem/corvi.d/services/*",
]


[workspace.package]
version = "0.3.0"

authors = [
	"AkaiaLabs <cvo.akaia@gmail.com>",
	"Carina.Akaia.org <cvo.akaia@gmail.com>",
]

keywords = [
	"algorithmic-society",
	"akaia-labs",
	"communication",
	"community",
	"knowledge base",
]


[profile.release]
opt-level = "z"
lto = true
panic = "abort"
overflow-checks = true


[workspace.dependencies]
# Internal dependencies
corvutils = { path = "packages/corvutils" }
crowdcomm_sdk = { path = "packages/crowdcomm_sdk" }

# External dependencies
capitalize = "0.3.4"
dotenvy = "0.15.7"
hex = "0.4"
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde-env = "0.2.0"
serde_json = { version = "1.0" }
sequoia-openpgp = { version = "2.0.0", default-features = false }
spacetimedb = "1.1.2"
spacetimedb-sdk = "1.1.1"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
teloxide = { version = "0.15.0", features = ["macros"] }
teloxide-core = "0.11.2"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
unicode-segmentation = "1.12.0"
# wasm-opt = "0.116.1"
