[workspace]
resolver = "3"

members = [
	"applications/*",
	"core/stdb/modules/singularity/*",
	"packages/*",
	"subsystems/corvi.d/services/*",
	"subsystems/raiven/services/*",
]


[workspace.package]
version = "0.4.0"

authors = [
	"AkaiaLabs <cvo.akaia@gmail.com>",
	"Carina.Akaia.org <cvo.akaia@gmail.com>",
]

keywords = [
	"algorithmic-society",
	"groupware",
	"community",
	"communication",
	"knowledge base",
]


[profile.release]
opt-level = "z"
lto = true
panic = "abort"
overflow-checks = true


[workspace.dependencies]
# Internal dependencies
corvutils = { path = "packages/corvutils" }
crowdcomm_sdk = { path = "packages/crowdcomm_sdk" }

# External dependencies
capitalize = "0.3.4"
dotenvy = "0.15.7"
getrandom = { version = "0.3.2" }
hex = "0.4"
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde-env = "0.2.0"
serde_json = { version = "1.0" }
sequoia-openpgp = { version = "2.0.0", default-features = false }
spacetimedb = "1.1.2"
spacetimedb-sdk = "1.1.1"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
teloxide = { version = "0.15.0", features = ["macros"] }
teloxide-core = "0.11.2"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.17.0", default-features = false }
# wasm-opt = "0.116.1"
