[package]
name = "chatter"
description = "Simple console chat client for crow.d in Rust"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "chatter"
path = "src/main.rs"


[dependencies]
# crow.d
crowtocol_rs.workspace = true

# External packages
dotenvy.workspace = true
hex.workspace = true
spacetimedb-sdk.workspace = true
