[package]
name = "chatter"
description = "Simple terminal chat client for crow.d written in Rust"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "chatter"
path = "src/main.rs"


[dependencies]
# crow.d
crowcomm.workspace = true

# External packages
dotenvy.workspace = true
hex.workspace = true
spacetimedb-sdk.workspace = true
strum.workspace = true
strum_macros.workspace = true
