[package]
name = "chatter"
description = "Chat TUI for AkaiaLabs Corvi.d written in Rust"
version = "0.3.0"
edition = "2024"


[[bin]]
name = "chatter"
path = "src/main.rs"


[dependencies]
# corvi.d
crowdcomm.workspace = true

# External packages
dotenvy.workspace = true
hex.workspace = true
spacetimedb-sdk.workspace = true
strum.workspace = true
strum_macros.workspace = true
