[package]
name = "corvid_magpie"
description = "Chat GUI for AkaiaLabs Corvi.d written in Rust"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "magpie"
path = "src/main.rs"


[dependencies]
# Internal dependencies
crowdcomm_sdk.workspace = true

# External dependencies
dotenvy.workspace = true
hex.workspace = true
spacetimedb-sdk.workspace = true
strum.workspace = true
strum_macros.workspace = true
