[package]
publish = false
name = "corvidx"
description = "Akaia Labs corvi.d core SpacetimeDB server module"
version = "0.3.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]


[dependencies]
log.workspace = true
serde.workspace = true
spacetimedb.workspace = true
strum.workspace = true
strum_macros.workspace = true
