[package]
publish = false
name = "corvidx"
description = "Akaia Labs corvi.d core SpacetimeDB server module"
version = "0.3.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]


[dependencies]
# Internal dependencies
corvutils.workspace = true

# External dependencies
capitalize.workspace = true
log.workspace = true
serde.workspace = true

sequoia-openpgp = { workspace = true, features = [
	"crypto-rust",
	"allow-experimental-crypto",
	"allow-variable-time-crypto",
] }

spacetimedb.workspace = true
strum.workspace = true
strum_macros.workspace = true
