[package]
publish = false
name = "crowd_core"
description = "Akaia Labs crow.d core SpacetimeDB server module"
version = "0.2.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]


[dependencies]
log.workspace = true
serde.workspace = true
spacetimedb.workspace = true
strum.workspace = true
strum_macros.workspace = true
