[package]
publish = false
name = "telecrow"
description = "Akaia Labs corvi.d Rust telegram bridge"
version = "0.3.0"
edition = "2024"
default-run = "telecrow"


[[bin]]
name = "telecrow"
path = "src/main.rs"


[dependencies]
# Internal dependencies
corvutils.workspace = true
crowdcomm_sdk.workspace = true

# External dependencies
capitalize.workspace = true
dotenvy.workspace = true
hex.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
spacetimedb-sdk.workspace = true
teloxide.workspace = true
tokio.workspace = true
unicode-segmentation.workspace = true
