[package]
name = "corvidx_client"
description = "AkaiaLabs Corvi.d core SpacetimeDB module client library"
version = "0.3.0"
edition = "2024"


[lib]
name = "corvidx_client"
path = "src/lib.rs"


[dependencies]
# Internal dependencies
corvutils.workspace = true

# External dependencies
hex.workspace = true
serde.workspace = true
serde-env.workspace = true
spacetimedb-sdk.workspace = true
strum.workspace = true
strum_macros.workspace = true
teloxide.workspace = true
