[package]
name = "corvid_jayterm"
description = "Chat TUI for AkaiaLabs Corvi.d written in Rust"
version = "0.3.0"
edition = "2024"


[[bin]]
name = "jayterm"
path = "src/main.rs"


[dependencies]
# Internal dependencies
corvutils.workspace = true
crowdcomm.workspace = true

# External dependencies
dotenvy.workspace = true
hex.workspace = true
spacetimedb-sdk.workspace = true
strum.workspace = true
strum_macros.workspace = true
