[package]
publish = false
name = "oracle"
description = "ContinuityOS AI provider service"
version = "0.1.0"
edition = "2024"
default-run = "oracle"

# Subject to be extracted into a separate package, resides here for the initial prototyping
[[bin]]
name = "oracle"
path = "src/main.rs"


[dependencies]
# Internal dependencies
crowdcomm_sdk.workspace = true

# External dependencies
dotenvy.workspace = true
hex.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
spacetimedb-sdk.workspace = true
teloxide.workspace = true
tokio.workspace = true
