[package]
publish = false
name = "corvidx_server"
description = "Continuity OS core SpacetimeDB server module"
version = "0.5.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]


[dependencies]
# Internal dependencies
corvutils.workspace = true

# External dependencies
capitalize.workspace = true
log.workspace = true
serde.workspace = true
spacetimedb.workspace = true
strum.workspace = true
strum_macros.workspace = true
uuid = { workspace = true, features = ["serde"] }
